# rust_template

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: tests.yml
.sisyphus/notepads/move-readme/: learnings.md
crates/my_lib_1/: Cargo.toml
crates/my_lib_1/src/: lib.rs  study_1.rs
crates/my_lib_1/src/study_1/: fn_methods.rs  option.rs  print_1.rs  test_study.rs  trait_1.rs  trait_2.rs
crates/my_lib_1/src/study_1/test_study/: doc_test.rs  unit_1.rs
crates/my_lib_1/tests/: integration_test.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  lib.rs  utils.rs
crates/utils/src/config/: env.rs
crates/utils/src/doc/: config.md  lib.md  tools.md
crates/utils/src/tools/: log.rs
crates/utils/tests/: integration_test.rs
docker/: Dockerfile  infrastructure.yml
example/: lib_1.rs
src/: main.rs
