[package]
name = "rust_template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.92"
version = "0.1.1"
edition = "2024"

[[example]]
name = "example1"
path = "example/lib_1.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }

[profile.dev]
opt-level = 2

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.test]
inherits = "dev"

[profile.test.package."*"]
opt-level = 2
debug = false

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json", "multipart"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
getset = "0.1.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.31"
dotenvy = "0.15.7"
log = "0.4.29"
env_logger = "0.11.8"

