[package]
name = "utils"
rust-version.workspace = true
version.workspace = true
edition.workspace = true


[lib]
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
anyhow.workspace = true
serde.workspace = true
dotenvy.workspace = true
log.workspace = true
env_logger.workspace = true
config.workspace = true


